Make sticky footer

--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,37 @@
 body {
     display: flex;
     flex-direction: column;
+    min-height: 100vh;
     margin: 0;
 }
 
-.header {
+.header,
+.footer {
     display: flex;
-    flex-direction: row;
+    padding: 12px;
+    align-items: center;
+}
+
+.header {
     justify-content: space-between;
     background-color: cadetblue;
-    padding: 15px;
+    color: darkslategray;
+}
+
+.header-logo {
+    font-weight: bolder;
+    font-size: 24px;
+}
+
+.footer {
+    justify-content: center;
+    margin: auto;
+}
+
+.content {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
 }
 
 ul {
