--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,7 @@ body {
     display: flex;
     flex-direction: column;
     flex: 1;
+    align-items: center;
 }
 
 ul {
@@ -48,3 +49,7 @@ a {
     color: blanchedalmond;
 }
 
+.top {
+    display: flex;
+    align-items: center;
+}
