--- a/styles.css
+++ b/styles.css
@@ -13,19 +13,15 @@ body {
 }
 
 .header {
-    justify-content: space-between;
-    background-color: cadetblue;
-    color: black;
+    justify-content: center;
+    background-color: #4d213a;
+    color: whitesmoke;
+    gap: 450px;
 }
 
 .header-logo {
     font-weight: bolder;
     font-size: 24px;
-    padding-left: 3%;
-}
-
-.header-links {
-    padding-right: 3%;
 }
 
 .footer {
@@ -56,10 +52,11 @@ a {
 
 .top {
     display: flex;
-    align-items: center;
-    background-color: cadetblue;
+    background-color: #4d213a;
+    color: whitesmoke;
+    flex-shrink: 0;
     gap: 42px;
-    padding: 42px;
+    padding: 100px 100vh;
 }
 
 .center {
@@ -92,4 +89,24 @@ a {
     margin: 0;
     padding-bottom: 35px;
     font-size: 36px;
+}
+
+.top-card  {
+    width: 400px;
+}
+
+.top-h1 {
+    font-size: 48px;
+    font-weight: bolder;
+    margin: 0;
+}
+
+.top-p {
+    font-size: 18px;
+    margin: 0;
+}
+
+img {
+    border-radius: 10px;
+    border-style: solid;
 }
