--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ body {
     flex-direction: column;
     min-height: 100vh;
     margin: 0;
+    overflow-x: hidden;
 }
 
 .header,
@@ -57,6 +58,7 @@ a {
     flex-shrink: 0;
     gap: 42px;
     padding: 100px 100vh;
+    overflow-x: hidden;
 }
 
 .center {
