--- a/styles.css
+++ b/styles.css
@@ -17,12 +17,17 @@ body {
     justify-content: center;
     background-color: #4d213a;
     color: whitesmoke;
-    gap: 450px;
+    gap: 500px;
 }
 
 .header-logo {
     font-weight: bolder;
     font-size: 24px;
+    flex-shrink: 0;
+}
+
+.header-links {
+    flex-shrink: 0;
 }
 
 .footer {
@@ -56,13 +61,14 @@ a {
     background-color: #4d213a;
     color: whitesmoke;
     flex-shrink: 0;
-    gap: 42px;
+    gap: 90px;
     padding: 100px 100vh;
     overflow-x: hidden;
 }
 
 .center {
-    padding: 24px;
+    padding-top: 24px;
+    padding-bottom: 60px;
 }
 
 .illustrations {
@@ -77,11 +83,14 @@ a {
     padding-top: 35px;
     padding-left: 35px;
     padding-right: 35px;
+    padding: 70px 100vh;
+    overflow-x: hidden
 }
 
 .quote-text {
     font-style: italic;
     font-size: 36px;
+    width: 900px;
     margin: 0;
 }
 
