--- a/styles.css
+++ b/styles.css
@@ -4,13 +4,14 @@ body {
     min-height: 100vh;
     margin: 0;
     overflow-x: hidden;
+    font-family: "Gill Sans", sans-serif	;
 }
 
 .header,
 .footer {
     display: flex;
     align-items: center;
-    background-color: #4d213a;
+    background-color: #5c2140;
     color: whitesmoke;
 }
 
@@ -58,7 +59,7 @@ a {
 
 .top {
     display: flex;
-    background-color: #4d213a;
+    background-color: #5c2140;
     color: whitesmoke;
     flex-shrink: 0;
     gap: 90px;
@@ -88,8 +89,11 @@ a {
 }
 
 .quote-text {
+    color: #1F2937;
     font-style: italic;
     font-size: 36px;
+    font-weight: lighter;
+    font-family: "FreeMono", monospace;
     width: 900px;
     margin: 0;
 }
@@ -158,11 +162,12 @@ img {
 }
 
 button {
-    background-color: #4d213a;
+    background-color: #5c2140;
     color: #E5E7EB;
     border: solid;
     border-radius: 8px;
     font-size: 18px;
+    font-weight: bold;
     padding: 6px 12px;
     border-color: #3882F6;
 }
