--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
 .footer {
     display: flex;
     align-items: center;
-    background-color: #5c2140;
+    background-color: #10211a;
     color: whitesmoke;
 }
 
@@ -59,7 +59,7 @@ a {
 
 .top {
     display: flex;
-    background-color: #5c2140;
+    background-color: #10211a;
     color: whitesmoke;
     flex-shrink: 0;
     gap: 90px;
@@ -85,7 +85,8 @@ a {
     padding-left: 35px;
     padding-right: 35px;
     padding: 70px 100vh;
-    overflow-x: hidden
+    overflow-x: hidden;
+    font-weight: lighter;
 }
 
 .quote-text {
@@ -162,7 +163,7 @@ img {
 }
 
 button {
-    background-color: #5c2140;
+    background-color: #10211a;
     color: #E5E7EB;
     border: solid;
     border-radius: 8px;
