--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,7 @@ body {
     flex-direction: column;
     flex: 1;
     align-items: center;
+    justify-content: center;
 }
 
 ul {
@@ -171,4 +172,62 @@ button {
     font-weight: bold;
     padding: 6px 12px;
     border-color: #3882F6;
+}
+
+@media only screen and (max-width: 760px) {
+    .content {
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .header {
+        flex-direction: column;
+        justify-content: space-between;
+        gap: 0;
+        padding: 0;
+        margin-bottom: 10px;
+    }
+
+    .top {
+        flex-direction: column;
+        padding: 0;
+        flex-shrink: 2;
+        gap: 5px;
+    }
+
+    .top-card  {
+        width: 300px;
+        padding: 10px;
+        margin-top: 10px;
+    }
+
+    .quote {
+        padding: 0;
+    }
+
+    .quote-text {
+        width: 300px;
+    }
+
+    .illustrations {
+        flex-direction: column;
+    }
+
+    .bottom {
+        padding: 0;
+        flex-direction: column;
+        gap: 0;
+    }
+
+    .large-illustration {
+        width: 300px;
+        height: auto;
+        margin: 10px;
+    }
+
+    ul {
+        flex-direction: column;
+        gap: 0;
+    }
+
 }
